testdata/parser/negative/2.txt
Parse error at 2.pdl:8:1: Defined symbol clash: main
primitive main(in a, out b) {
^
